--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -11,13 +11,8 @@ jobs:
   build_push:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Build with Maven
-        run: mvn -B package -DskipTests --projects agent/war-unsecured --also-make
+      - name: Checkout Repository
+        uses: actions/checkout@v2
       - name: Publish Image
         uses: matootie/github-docker@v2.2.3
         with:
