Revert "Update and rename dockerpublish.yml to warpublish.yml"
This reverts commit d9e8667c73c921620690780eb3381e47b0e2098f.

--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -1,4 +1,4 @@
-name: Build & Publish
+name: Dockerfile Build & Publish
 
 on:
   push:
@@ -16,10 +16,3 @@ jobs:
         with:
           accessToken: ${{ secrets.GITHUB_TOKEN }}
           imageTagSuffix: '-patched'
-      
-      - run: cp agent/war-unsecured/target/jolokia-*.war jolokia.war
-      - uses: JasonEtco/upload-to-release@master
-        with:
-          args: jolokia.war
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
