--- a/.github/workflows/warpublish.yml
+++ b/.github/workflows/warpublish.yml
@@ -1,6 +1,9 @@
 name: Build & Publish
 
-on: release
+on:
+  push:
+    tags:
+      - "v*"
 jobs:
   docker_publish:
     runs-on: ubuntu-latest
@@ -10,9 +13,10 @@ jobs:
         with:
           java-version: 1.8
       - run: mvn -B -DskipTests package --projects agent/war-unsecured --also-make
-      
-      - uses: JasonEtco/upload-to-release@master
+      - run: cp -T agent/war-unsecured/target/jolokia-*.war jolokia.war
+      - uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          args: agent/war-unsecured/target/jolokia-*.war
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            jolokia.war
